// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SceneLayout > should not render camera preview if editing and non-camera component is on selectedNode 1`] = `
<div>
  <div
    class="sc-aXZVg iQWtQB"
    data-mocked="Box"
  >
    <div
      class="sc-gEvEer deMTkg"
      data-mocked="Box"
    />
    <div
      class="sc-eqUAAy lplIYk"
      data-mocked="Box"
    >
      <div
        class="sc-kAyceB cHqwUn"
        data-mocked="Box"
      >
        <div
          class="tm-wrapper-left"
        >
          <div
            class="tm-content"
          >
            <div
              class="tm-collapse-panel open"
            >
              <div
                class="tm-sidePanelTabs"
                data-mocked="Tabs"
                tabs="[object Object],[object Object],[object Object]"
              />
            </div>
          </div>
          <div
            class="tm-handle"
            data-testid="handle"
          >
            <div
              data-mocked="Icon"
              name="angle-left"
              variant="normal"
            />
          </div>
        </div>
      </div>
      <div
        class="sc-fqkvVR hhwHuy"
        data-mocked="Box"
      >
        <div
          class="sc-dcJsrY cvpwOE"
          data-mocked="Box"
          padding="xxs"
        >
          <topbar />
        </div>
        <div
          class="sc-iGgWBj hzaGuy"
          data-mocked="Box"
        >
          <div
            class="sc-bmzYkS houeVn"
          >
            <div
              class="sc-dAbbOL ikZQFz"
            >
              <div
                class="sc-dAbbOL ikZQFz"
              >
                <div
                  class="sc-ikkxIA bmLzMZ"
                  data-testid="undo"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Undo"
                      role="img"
                      title="Undo"
                    >
                      <div
                        class="sc-gFqAkR dLhkwp"
                        data-mocked="Icon"
                        name="undo"
                        variant="disabled"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="sc-ikkxIA bmLzMZ"
                  data-testid="redo"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Redo"
                      role="img"
                      title="Redo"
                    >
                      <div
                        class="sc-gFqAkR cDuBXD"
                        data-mocked="Icon"
                        name="undo"
                        variant="disabled"
                      />
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-dAbbOL ikZQFz"
              >
                <div
                  class="sc-ikkxIA hvSQfv"
                  data-testid="add-object"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Add object"
                      role="img"
                      title="Add object"
                    >
                      <div
                        class="sc-gFqAkR dLhkwp"
                        data-mocked="Icon"
                        name="add-plus"
                        variant="normal"
                      />
                    </span>
                  </div>
                  <div
                    class="sc-fPXMVe gpPjDS"
                  >
                    <svg
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M16 0v16L0 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="sc-fUnMCh eAcRGA"
                  >
                    <div
                      style="overflow-y: auto;"
                    >
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-empty"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add empty node
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA bmLzMZ"
                        data-testid="add-object-model"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="text-status-inactive"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add 3D model
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-light"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add light
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-view-camera"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add camera from current view
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-tag"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add tag
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-annotation"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add annotation
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA bmLzMZ"
                        data-testid="add-effect-model-shader"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="text-status-inactive"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add model shader
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-motion-indicator"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add motion indicator
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="sc-ikkxIA hvSQfv"
                  data-testid="camera-controls-orbit"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Orbit"
                      role="img"
                      title="Orbit"
                    >
                      <div
                        class="sc-gFqAkR bBvyEv"
                        data-mocked="Icon"
                        scale="1.04"
                        variant="normal"
                      >
                        <div>
                          <span>
                            <svg
                              height="16"
                              width="16"
                            >
                              <g
                                fill="none"
                              >
                                <path
                                  d="M10.5 8.23c0 4.06-1.14 7.33-2.5 7.33s-2.5-3.35-2.5-7.5S6.62.56 8 .56c1 0 1.87 1.79 2.27 4.35"
                                  stroke="currentColor"
                                />
                                <path
                                  d="m9.23 8.61 1.21-2.18 1.28 2.14z"
                                  fill="currentColor"
                                />
                                <path
                                  d="M7.84 10.56C3.77 10.54.5 9.43.5 8.06s3.36-2.5 7.5-2.5 7.5 1.12 7.5 2.5c0 1-1.78 1.88-4.35 2.27"
                                  stroke="currentColor"
                                />
                                <path
                                  d="m7.46 9.29 2.17 1.22-2.14 1.27z"
                                  fill="currentColor"
                                />
                              </g>
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fPXMVe gpPjDS"
                  >
                    <svg
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M16 0v16L0 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="sc-fUnMCh eAcRGA"
                  >
                    <div
                      style="overflow-y: auto;"
                    >
                      <div
                        class="sc-ikkxIA fuwfLW"
                        data-testid="camera-controls-orbit"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Orbit"
                            role="img"
                            title="Orbit"
                          >
                            <div
                              class="sc-gFqAkR bBvyEv"
                              data-mocked="Icon"
                              scale="1.04"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    height="16"
                                    width="16"
                                  >
                                    <g
                                      fill="none"
                                    >
                                      <path
                                        d="M10.5 8.23c0 4.06-1.14 7.33-2.5 7.33s-2.5-3.35-2.5-7.5S6.62.56 8 .56c1 0 1.87 1.79 2.27 4.35"
                                        stroke="currentColor"
                                      />
                                      <path
                                        d="m9.23 8.61 1.21-2.18 1.28 2.14z"
                                        fill="currentColor"
                                      />
                                      <path
                                        d="M7.84 10.56C3.77 10.54.5 9.43.5 8.06s3.36-2.5 7.5-2.5 7.5 1.12 7.5 2.5c0 1-1.78 1.88-4.35 2.27"
                                        stroke="currentColor"
                                      />
                                      <path
                                        d="m7.46 9.29 2.17 1.22-2.14 1.27z"
                                        fill="currentColor"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          3D Orbit
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="camera-controls-pan"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Pan"
                            role="img"
                            title="Pan"
                          >
                            <div
                              class="sc-gFqAkR bBvyEv"
                              data-mocked="Icon"
                              scale="1.04"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    height="14"
                                    width="14"
                                  >
                                    <path
                                      d="M9.15 1.5a1 1 0 0 1 2 0m-4 0a1 1 0 1 1 2 0m2 2a1 1 0 0 1 2 0v5.9a4.1 4.1 0 0 1-4.1 4.1h-2A4.1 4.1 0 0 1 3.92 12l-2.8-3.34a1.21 1.21 0 0 1 .39-1.84 1.2 1.2 0 0 1 1.19.06l1.42.91h1V2.5a1 1 0 1 1 2 0m4.02 4.28.01-5.28m-2 5.28V1.5m-2 5.28V1.5"
                                      fill="none"
                                      stroke="currentColor"
                                    />
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          3D Pan
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="sc-dAbbOL ikZQFz"
              >
                <div
                  class="sc-ikkxIA bmLzMZ"
                  data-testid="delete"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Delete"
                      role="img"
                      title="Delete"
                    >
                      <div
                        class="sc-gFqAkR dLhkwp"
                        data-mocked="Icon"
                        variant="disabled"
                      >
                        <div>
                          <span>
                            <svg
                              viewBox="0 0 14 15"
                            >
                              <path
                                d="M9 0a1 1 0 0 1 1 1h3a1 1 0 0 1 .117 1.993L13 3h-.08l-.923 11.077a1 1 0 0 1-.878.916L11 15H3a1 1 0 0 1-.997-.923L1.079 3H1a1 1 0 0 1-.117-1.993L1 1h3a1 1 0 0 1 .883-.993L5 0h4Zm1.919 3H3.08l.846 10h6.147l.846-10Z"
                                fill="currentColor"
                                fill-rule="nonzero"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
                <div
                  class="sc-ikkxIA hvSQfv"
                  data-testid="transform-translate"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Translate"
                      role="img"
                      title="Translate"
                    >
                      <div
                        class="sc-gFqAkR hQcoYN"
                        data-mocked="Icon"
                        scale="1.06"
                        variant="normal"
                      >
                        <div>
                          <span>
                            <svg
                              viewBox="0 0 16 16"
                            >
                              <g
                                fill="currentColor"
                                fill-rule="nonzero"
                                stroke="currentColor"
                                stroke-linejoin="round"
                                stroke-width="1.2"
                              >
                                <path
                                  d="M6.04 4h4l-2-3zM6.04 12h4l-2 3zM12 10V6l3 2zM4 10V6L1 8z"
                                />
                              </g>
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fPXMVe gpPjDS"
                  >
                    <svg
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M16 0v16L0 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="sc-fUnMCh eAcRGA"
                  >
                    <div
                      style="overflow-y: auto;"
                    >
                      <div
                        class="sc-ikkxIA fuwfLW"
                        data-testid="transform-translate"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Translate"
                            role="img"
                            title="Translate"
                          >
                            <div
                              class="sc-gFqAkR hQcoYN"
                              data-mocked="Icon"
                              scale="1.06"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    viewBox="0 0 16 16"
                                  >
                                    <g
                                      fill="currentColor"
                                      fill-rule="nonzero"
                                      stroke="currentColor"
                                      stroke-linejoin="round"
                                      stroke-width="1.2"
                                    >
                                      <path
                                        d="M6.04 4h4l-2-3zM6.04 12h4l-2 3zM12 10V6l3 2zM4 10V6L1 8z"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          Translate object
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="transform-rotate"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Rotate"
                            role="img"
                            title="Rotate"
                          >
                            <div
                              class="sc-gFqAkR hQcoYN"
                              data-mocked="Icon"
                              scale="1.06"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    viewBox="0 0 16 16"
                                  >
                                    <g
                                      fill="none"
                                      fill-rule="evenodd"
                                      stroke="currentColor"
                                      stroke-width="1.7"
                                      transform="translate(1)"
                                    >
                                      <path
                                        d="M9 5h5V0"
                                      />
                                      <path
                                        d="M0 8a7 7 0 0 1 7-7 6.87 6.87 0 0 1 6.3 4M5 11H0v5"
                                      />
                                      <path
                                        d="M14 8a7 7 0 0 1-7 7 6.87 6.87 0 0 1-6.3-4"
                                      />
                                      <circle
                                        cx="7"
                                        cy="8"
                                        fill="currentColor"
                                        fill-rule="nonzero"
                                        r="1"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          Rotate object
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="transform-scale"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Scale"
                            role="img"
                            title="Scale"
                          >
                            <div
                              class="sc-gFqAkR hQcoYN"
                              data-mocked="Icon"
                              scale="1.06"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    viewBox="0 0 16 16"
                                  >
                                    <g
                                      fill="none"
                                      fill-rule="evenodd"
                                      stroke="currentColor"
                                      stroke-width="1.7"
                                    >
                                      <path
                                        d="M.5 10.5v5h5v-5z"
                                        fill="currentColor"
                                        fill-rule="nonzero"
                                      />
                                      <path
                                        d="M.5 10V.5h15v15H6"
                                      />
                                      <path
                                        d="M7 4h5v5M12 4 8 8"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          Scale object
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-imWYAI eUyaSV"
        data-mocked="Box"
      >
        <div
          class="tm-wrapper-right"
        >
          <div
            class="tm-content"
          >
            <div
              class="tm-collapse-panel open"
            >
              <div
                class="tm-sidePanelTabs"
                data-mocked="Tabs"
                tabs="[object Object]"
              />
            </div>
          </div>
          <div
            class="tm-handle"
            data-testid="handle"
          >
            <div
              data-mocked="Icon"
              name="angle-right"
              variant="normal"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneLayout > should render camera preview if editing and camera component is on selectedNode 1`] = `
<div>
  <div
    class="sc-aXZVg iQWtQB"
    data-mocked="Box"
  >
    <div
      class="sc-gEvEer deMTkg"
      data-mocked="Box"
    />
    <div
      class="sc-eqUAAy lplIYk"
      data-mocked="Box"
    >
      <div
        class="sc-kAyceB cHqwUn"
        data-mocked="Box"
      >
        <div
          class="tm-wrapper-left"
        >
          <div
            class="tm-content"
          >
            <div
              class="tm-collapse-panel open"
            >
              <div
                class="tm-sidePanelTabs"
                data-mocked="Tabs"
                tabs="[object Object],[object Object],[object Object]"
              />
            </div>
          </div>
          <div
            class="tm-handle"
            data-testid="handle"
          >
            <div
              data-mocked="Icon"
              name="angle-left"
              variant="normal"
            />
          </div>
        </div>
      </div>
      <div
        class="sc-fqkvVR hhwHuy"
        data-mocked="Box"
      >
        <div
          class="sc-dcJsrY cvpwOE"
          data-mocked="Box"
          padding="xxs"
        >
          <topbar />
        </div>
        <div
          class="sc-iGgWBj hzaGuy"
          data-mocked="Box"
        >
          <div
            class="sc-bmzYkS houeVn"
          >
            <div
              class="sc-dAbbOL ikZQFz"
            >
              <div
                class="sc-dAbbOL ikZQFz"
              >
                <div
                  class="sc-ikkxIA bmLzMZ"
                  data-testid="undo"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Undo"
                      role="img"
                      title="Undo"
                    >
                      <div
                        class="sc-gFqAkR dLhkwp"
                        data-mocked="Icon"
                        name="undo"
                        variant="disabled"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="sc-ikkxIA bmLzMZ"
                  data-testid="redo"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Redo"
                      role="img"
                      title="Redo"
                    >
                      <div
                        class="sc-gFqAkR cDuBXD"
                        data-mocked="Icon"
                        name="undo"
                        variant="disabled"
                      />
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-dAbbOL ikZQFz"
              >
                <div
                  class="sc-ikkxIA hvSQfv"
                  data-testid="add-object"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Add object"
                      role="img"
                      title="Add object"
                    >
                      <div
                        class="sc-gFqAkR dLhkwp"
                        data-mocked="Icon"
                        name="add-plus"
                        variant="normal"
                      />
                    </span>
                  </div>
                  <div
                    class="sc-fPXMVe gpPjDS"
                  >
                    <svg
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M16 0v16L0 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="sc-fUnMCh eAcRGA"
                  >
                    <div
                      style="overflow-y: auto;"
                    >
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-empty"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add empty node
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA bmLzMZ"
                        data-testid="add-object-model"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="text-status-inactive"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add 3D model
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-light"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add light
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-view-camera"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add camera from current view
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-tag"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add tag
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-annotation"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add annotation
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA bmLzMZ"
                        data-testid="add-effect-model-shader"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="text-status-inactive"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add model shader
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-motion-indicator"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add motion indicator
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="sc-ikkxIA hvSQfv"
                  data-testid="camera-controls-orbit"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Orbit"
                      role="img"
                      title="Orbit"
                    >
                      <div
                        class="sc-gFqAkR bBvyEv"
                        data-mocked="Icon"
                        scale="1.04"
                        variant="normal"
                      >
                        <div>
                          <span>
                            <svg
                              height="16"
                              width="16"
                            >
                              <g
                                fill="none"
                              >
                                <path
                                  d="M10.5 8.23c0 4.06-1.14 7.33-2.5 7.33s-2.5-3.35-2.5-7.5S6.62.56 8 .56c1 0 1.87 1.79 2.27 4.35"
                                  stroke="currentColor"
                                />
                                <path
                                  d="m9.23 8.61 1.21-2.18 1.28 2.14z"
                                  fill="currentColor"
                                />
                                <path
                                  d="M7.84 10.56C3.77 10.54.5 9.43.5 8.06s3.36-2.5 7.5-2.5 7.5 1.12 7.5 2.5c0 1-1.78 1.88-4.35 2.27"
                                  stroke="currentColor"
                                />
                                <path
                                  d="m7.46 9.29 2.17 1.22-2.14 1.27z"
                                  fill="currentColor"
                                />
                              </g>
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fPXMVe gpPjDS"
                  >
                    <svg
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M16 0v16L0 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="sc-fUnMCh eAcRGA"
                  >
                    <div
                      style="overflow-y: auto;"
                    >
                      <div
                        class="sc-ikkxIA fuwfLW"
                        data-testid="camera-controls-orbit"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Orbit"
                            role="img"
                            title="Orbit"
                          >
                            <div
                              class="sc-gFqAkR bBvyEv"
                              data-mocked="Icon"
                              scale="1.04"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    height="16"
                                    width="16"
                                  >
                                    <g
                                      fill="none"
                                    >
                                      <path
                                        d="M10.5 8.23c0 4.06-1.14 7.33-2.5 7.33s-2.5-3.35-2.5-7.5S6.62.56 8 .56c1 0 1.87 1.79 2.27 4.35"
                                        stroke="currentColor"
                                      />
                                      <path
                                        d="m9.23 8.61 1.21-2.18 1.28 2.14z"
                                        fill="currentColor"
                                      />
                                      <path
                                        d="M7.84 10.56C3.77 10.54.5 9.43.5 8.06s3.36-2.5 7.5-2.5 7.5 1.12 7.5 2.5c0 1-1.78 1.88-4.35 2.27"
                                        stroke="currentColor"
                                      />
                                      <path
                                        d="m7.46 9.29 2.17 1.22-2.14 1.27z"
                                        fill="currentColor"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          3D Orbit
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="camera-controls-pan"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Pan"
                            role="img"
                            title="Pan"
                          >
                            <div
                              class="sc-gFqAkR bBvyEv"
                              data-mocked="Icon"
                              scale="1.04"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    height="14"
                                    width="14"
                                  >
                                    <path
                                      d="M9.15 1.5a1 1 0 0 1 2 0m-4 0a1 1 0 1 1 2 0m2 2a1 1 0 0 1 2 0v5.9a4.1 4.1 0 0 1-4.1 4.1h-2A4.1 4.1 0 0 1 3.92 12l-2.8-3.34a1.21 1.21 0 0 1 .39-1.84 1.2 1.2 0 0 1 1.19.06l1.42.91h1V2.5a1 1 0 1 1 2 0m4.02 4.28.01-5.28m-2 5.28V1.5m-2 5.28V1.5"
                                      fill="none"
                                      stroke="currentColor"
                                    />
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          3D Pan
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="sc-dAbbOL ikZQFz"
              >
                <div
                  class="sc-ikkxIA bmLzMZ"
                  data-testid="delete"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Delete"
                      role="img"
                      title="Delete"
                    >
                      <div
                        class="sc-gFqAkR dLhkwp"
                        data-mocked="Icon"
                        variant="disabled"
                      >
                        <div>
                          <span>
                            <svg
                              viewBox="0 0 14 15"
                            >
                              <path
                                d="M9 0a1 1 0 0 1 1 1h3a1 1 0 0 1 .117 1.993L13 3h-.08l-.923 11.077a1 1 0 0 1-.878.916L11 15H3a1 1 0 0 1-.997-.923L1.079 3H1a1 1 0 0 1-.117-1.993L1 1h3a1 1 0 0 1 .883-.993L5 0h4Zm1.919 3H3.08l.846 10h6.147l.846-10Z"
                                fill="currentColor"
                                fill-rule="nonzero"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
                <div
                  class="sc-ikkxIA hvSQfv"
                  data-testid="transform-translate"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Translate"
                      role="img"
                      title="Translate"
                    >
                      <div
                        class="sc-gFqAkR hQcoYN"
                        data-mocked="Icon"
                        scale="1.06"
                        variant="normal"
                      >
                        <div>
                          <span>
                            <svg
                              viewBox="0 0 16 16"
                            >
                              <g
                                fill="currentColor"
                                fill-rule="nonzero"
                                stroke="currentColor"
                                stroke-linejoin="round"
                                stroke-width="1.2"
                              >
                                <path
                                  d="M6.04 4h4l-2-3zM6.04 12h4l-2 3zM12 10V6l3 2zM4 10V6L1 8z"
                                />
                              </g>
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fPXMVe gpPjDS"
                  >
                    <svg
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M16 0v16L0 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="sc-fUnMCh eAcRGA"
                  >
                    <div
                      style="overflow-y: auto;"
                    >
                      <div
                        class="sc-ikkxIA fuwfLW"
                        data-testid="transform-translate"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Translate"
                            role="img"
                            title="Translate"
                          >
                            <div
                              class="sc-gFqAkR hQcoYN"
                              data-mocked="Icon"
                              scale="1.06"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    viewBox="0 0 16 16"
                                  >
                                    <g
                                      fill="currentColor"
                                      fill-rule="nonzero"
                                      stroke="currentColor"
                                      stroke-linejoin="round"
                                      stroke-width="1.2"
                                    >
                                      <path
                                        d="M6.04 4h4l-2-3zM6.04 12h4l-2 3zM12 10V6l3 2zM4 10V6L1 8z"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          Translate object
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="transform-rotate"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Rotate"
                            role="img"
                            title="Rotate"
                          >
                            <div
                              class="sc-gFqAkR hQcoYN"
                              data-mocked="Icon"
                              scale="1.06"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    viewBox="0 0 16 16"
                                  >
                                    <g
                                      fill="none"
                                      fill-rule="evenodd"
                                      stroke="currentColor"
                                      stroke-width="1.7"
                                      transform="translate(1)"
                                    >
                                      <path
                                        d="M9 5h5V0"
                                      />
                                      <path
                                        d="M0 8a7 7 0 0 1 7-7 6.87 6.87 0 0 1 6.3 4M5 11H0v5"
                                      />
                                      <path
                                        d="M14 8a7 7 0 0 1-7 7 6.87 6.87 0 0 1-6.3-4"
                                      />
                                      <circle
                                        cx="7"
                                        cy="8"
                                        fill="currentColor"
                                        fill-rule="nonzero"
                                        r="1"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          Rotate object
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="transform-scale"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Scale"
                            role="img"
                            title="Scale"
                          >
                            <div
                              class="sc-gFqAkR hQcoYN"
                              data-mocked="Icon"
                              scale="1.06"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    viewBox="0 0 16 16"
                                  >
                                    <g
                                      fill="none"
                                      fill-rule="evenodd"
                                      stroke="currentColor"
                                      stroke-width="1.7"
                                    >
                                      <path
                                        d="M.5 10.5v5h5v-5z"
                                        fill="currentColor"
                                        fill-rule="nonzero"
                                      />
                                      <path
                                        d="M.5 10V.5h15v15H6"
                                      />
                                      <path
                                        d="M7 4h5v5M12 4 8 8"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          Scale object
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="tm-display-container"
          >
            <div
              class="tm-display-title"
            >
              Test Camera
            </div>
            <div
              class="tm-display-area"
            />
          </div>
        </div>
      </div>
      <div
        class="sc-imWYAI eUyaSV"
        data-mocked="Box"
      >
        <div
          class="tm-wrapper-right"
        >
          <div
            class="tm-content"
          >
            <div
              class="tm-collapse-panel open"
            >
              <div
                class="tm-sidePanelTabs"
                data-mocked="Tabs"
                tabs="[object Object]"
              />
            </div>
          </div>
          <div
            class="tm-handle"
            data-testid="handle"
          >
            <div
              data-mocked="Icon"
              name="angle-right"
              variant="normal"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneLayout > should render correctly in Edit mode 1`] = `
<div>
  <div
    class="sc-aXZVg iQWtQB"
    data-mocked="Box"
  >
    <div
      class="sc-gEvEer deMTkg"
      data-mocked="Box"
    />
    <div
      class="sc-eqUAAy lplIYk"
      data-mocked="Box"
    >
      <div
        class="sc-kAyceB cHqwUn"
        data-mocked="Box"
      >
        <div
          class="tm-wrapper-left"
        >
          <div
            class="tm-content"
          >
            <div
              class="tm-collapse-panel open"
            >
              <div
                class="tm-sidePanelTabs"
                data-mocked="Tabs"
                tabs="[object Object],[object Object],[object Object]"
              />
            </div>
          </div>
          <div
            class="tm-handle"
            data-testid="handle"
          >
            <div
              data-mocked="Icon"
              name="angle-left"
              variant="normal"
            />
          </div>
        </div>
      </div>
      <div
        class="sc-fqkvVR hhwHuy"
        data-mocked="Box"
      >
        <div
          class="sc-dcJsrY cvpwOE"
          data-mocked="Box"
          padding="xxs"
        >
          <topbar />
        </div>
        <div
          class="sc-iGgWBj hzaGuy"
          data-mocked="Box"
        >
          <div
            class="sc-bmzYkS houeVn"
          >
            <div
              class="sc-dAbbOL ikZQFz"
            >
              <div
                class="sc-dAbbOL ikZQFz"
              >
                <div
                  class="sc-ikkxIA bmLzMZ"
                  data-testid="undo"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Undo"
                      role="img"
                      title="Undo"
                    >
                      <div
                        class="sc-gFqAkR dLhkwp"
                        data-mocked="Icon"
                        name="undo"
                        variant="disabled"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="sc-ikkxIA bmLzMZ"
                  data-testid="redo"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Redo"
                      role="img"
                      title="Redo"
                    >
                      <div
                        class="sc-gFqAkR cDuBXD"
                        data-mocked="Icon"
                        name="undo"
                        variant="disabled"
                      />
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-dAbbOL ikZQFz"
              >
                <div
                  class="sc-ikkxIA hvSQfv"
                  data-testid="add-object"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Add object"
                      role="img"
                      title="Add object"
                    >
                      <div
                        class="sc-gFqAkR dLhkwp"
                        data-mocked="Icon"
                        name="add-plus"
                        variant="normal"
                      />
                    </span>
                  </div>
                  <div
                    class="sc-fPXMVe gpPjDS"
                  >
                    <svg
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M16 0v16L0 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="sc-fUnMCh eAcRGA"
                  >
                    <div
                      style="overflow-y: auto;"
                    >
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-empty"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add empty node
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA bmLzMZ"
                        data-testid="add-object-model"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="text-status-inactive"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add 3D model
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-light"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add light
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-view-camera"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add camera from current view
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-tag"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add tag
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-annotation"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add annotation
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA bmLzMZ"
                        data-testid="add-effect-model-shader"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="text-status-inactive"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add model shader
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="add-object-motion-indicator"
                        tabindex="0"
                      >
                        <div
                          class="sc-hzhJZQ jUtZUZ"
                          color="inherit"
                          data-mocked="Box"
                          variant="small"
                        >
                          Add motion indicator
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="sc-ikkxIA hvSQfv"
                  data-testid="camera-controls-orbit"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Orbit"
                      role="img"
                      title="Orbit"
                    >
                      <div
                        class="sc-gFqAkR bBvyEv"
                        data-mocked="Icon"
                        scale="1.04"
                        variant="normal"
                      >
                        <div>
                          <span>
                            <svg
                              height="16"
                              width="16"
                            >
                              <g
                                fill="none"
                              >
                                <path
                                  d="M10.5 8.23c0 4.06-1.14 7.33-2.5 7.33s-2.5-3.35-2.5-7.5S6.62.56 8 .56c1 0 1.87 1.79 2.27 4.35"
                                  stroke="currentColor"
                                />
                                <path
                                  d="m9.23 8.61 1.21-2.18 1.28 2.14z"
                                  fill="currentColor"
                                />
                                <path
                                  d="M7.84 10.56C3.77 10.54.5 9.43.5 8.06s3.36-2.5 7.5-2.5 7.5 1.12 7.5 2.5c0 1-1.78 1.88-4.35 2.27"
                                  stroke="currentColor"
                                />
                                <path
                                  d="m7.46 9.29 2.17 1.22-2.14 1.27z"
                                  fill="currentColor"
                                />
                              </g>
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fPXMVe gpPjDS"
                  >
                    <svg
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M16 0v16L0 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="sc-fUnMCh eAcRGA"
                  >
                    <div
                      style="overflow-y: auto;"
                    >
                      <div
                        class="sc-ikkxIA fuwfLW"
                        data-testid="camera-controls-orbit"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Orbit"
                            role="img"
                            title="Orbit"
                          >
                            <div
                              class="sc-gFqAkR bBvyEv"
                              data-mocked="Icon"
                              scale="1.04"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    height="16"
                                    width="16"
                                  >
                                    <g
                                      fill="none"
                                    >
                                      <path
                                        d="M10.5 8.23c0 4.06-1.14 7.33-2.5 7.33s-2.5-3.35-2.5-7.5S6.62.56 8 .56c1 0 1.87 1.79 2.27 4.35"
                                        stroke="currentColor"
                                      />
                                      <path
                                        d="m9.23 8.61 1.21-2.18 1.28 2.14z"
                                        fill="currentColor"
                                      />
                                      <path
                                        d="M7.84 10.56C3.77 10.54.5 9.43.5 8.06s3.36-2.5 7.5-2.5 7.5 1.12 7.5 2.5c0 1-1.78 1.88-4.35 2.27"
                                        stroke="currentColor"
                                      />
                                      <path
                                        d="m7.46 9.29 2.17 1.22-2.14 1.27z"
                                        fill="currentColor"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          3D Orbit
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="camera-controls-pan"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Pan"
                            role="img"
                            title="Pan"
                          >
                            <div
                              class="sc-gFqAkR bBvyEv"
                              data-mocked="Icon"
                              scale="1.04"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    height="14"
                                    width="14"
                                  >
                                    <path
                                      d="M9.15 1.5a1 1 0 0 1 2 0m-4 0a1 1 0 1 1 2 0m2 2a1 1 0 0 1 2 0v5.9a4.1 4.1 0 0 1-4.1 4.1h-2A4.1 4.1 0 0 1 3.92 12l-2.8-3.34a1.21 1.21 0 0 1 .39-1.84 1.2 1.2 0 0 1 1.19.06l1.42.91h1V2.5a1 1 0 1 1 2 0m4.02 4.28.01-5.28m-2 5.28V1.5m-2 5.28V1.5"
                                      fill="none"
                                      stroke="currentColor"
                                    />
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          3D Pan
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="sc-dAbbOL ikZQFz"
              >
                <div
                  class="sc-ikkxIA bmLzMZ"
                  data-testid="delete"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Delete"
                      role="img"
                      title="Delete"
                    >
                      <div
                        class="sc-gFqAkR dLhkwp"
                        data-mocked="Icon"
                        variant="disabled"
                      >
                        <div>
                          <span>
                            <svg
                              viewBox="0 0 14 15"
                            >
                              <path
                                d="M9 0a1 1 0 0 1 1 1h3a1 1 0 0 1 .117 1.993L13 3h-.08l-.923 11.077a1 1 0 0 1-.878.916L11 15H3a1 1 0 0 1-.997-.923L1.079 3H1a1 1 0 0 1-.117-1.993L1 1h3a1 1 0 0 1 .883-.993L5 0h4Zm1.919 3H3.08l.846 10h6.147l.846-10Z"
                                fill="currentColor"
                                fill-rule="nonzero"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
                <div
                  class="sc-ikkxIA hvSQfv"
                  data-testid="transform-translate"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Translate"
                      role="img"
                      title="Translate"
                    >
                      <div
                        class="sc-gFqAkR hQcoYN"
                        data-mocked="Icon"
                        scale="1.06"
                        variant="normal"
                      >
                        <div>
                          <span>
                            <svg
                              viewBox="0 0 16 16"
                            >
                              <g
                                fill="currentColor"
                                fill-rule="nonzero"
                                stroke="currentColor"
                                stroke-linejoin="round"
                                stroke-width="1.2"
                              >
                                <path
                                  d="M6.04 4h4l-2-3zM6.04 12h4l-2 3zM12 10V6l3 2zM4 10V6L1 8z"
                                />
                              </g>
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fPXMVe gpPjDS"
                  >
                    <svg
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M16 0v16L0 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="sc-fUnMCh eAcRGA"
                  >
                    <div
                      style="overflow-y: auto;"
                    >
                      <div
                        class="sc-ikkxIA fuwfLW"
                        data-testid="transform-translate"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Translate"
                            role="img"
                            title="Translate"
                          >
                            <div
                              class="sc-gFqAkR hQcoYN"
                              data-mocked="Icon"
                              scale="1.06"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    viewBox="0 0 16 16"
                                  >
                                    <g
                                      fill="currentColor"
                                      fill-rule="nonzero"
                                      stroke="currentColor"
                                      stroke-linejoin="round"
                                      stroke-width="1.2"
                                    >
                                      <path
                                        d="M6.04 4h4l-2-3zM6.04 12h4l-2 3zM12 10V6l3 2zM4 10V6L1 8z"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          Translate object
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="transform-rotate"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Rotate"
                            role="img"
                            title="Rotate"
                          >
                            <div
                              class="sc-gFqAkR hQcoYN"
                              data-mocked="Icon"
                              scale="1.06"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    viewBox="0 0 16 16"
                                  >
                                    <g
                                      fill="none"
                                      fill-rule="evenodd"
                                      stroke="currentColor"
                                      stroke-width="1.7"
                                      transform="translate(1)"
                                    >
                                      <path
                                        d="M9 5h5V0"
                                      />
                                      <path
                                        d="M0 8a7 7 0 0 1 7-7 6.87 6.87 0 0 1 6.3 4M5 11H0v5"
                                      />
                                      <path
                                        d="M14 8a7 7 0 0 1-7 7 6.87 6.87 0 0 1-6.3-4"
                                      />
                                      <circle
                                        cx="7"
                                        cy="8"
                                        fill="currentColor"
                                        fill-rule="nonzero"
                                        r="1"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          Rotate object
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="transform-scale"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Scale"
                            role="img"
                            title="Scale"
                          >
                            <div
                              class="sc-gFqAkR hQcoYN"
                              data-mocked="Icon"
                              scale="1.06"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    viewBox="0 0 16 16"
                                  >
                                    <g
                                      fill="none"
                                      fill-rule="evenodd"
                                      stroke="currentColor"
                                      stroke-width="1.7"
                                    >
                                      <path
                                        d="M.5 10.5v5h5v-5z"
                                        fill="currentColor"
                                        fill-rule="nonzero"
                                      />
                                      <path
                                        d="M.5 10V.5h15v15H6"
                                      />
                                      <path
                                        d="M7 4h5v5M12 4 8 8"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          Scale object
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-imWYAI eUyaSV"
        data-mocked="Box"
      >
        <div
          class="tm-wrapper-right"
        >
          <div
            class="tm-content"
          >
            <div
              class="tm-collapse-panel open"
            >
              <div
                class="tm-sidePanelTabs"
                data-mocked="Tabs"
                tabs="[object Object]"
              />
            </div>
          </div>
          <div
            class="tm-handle"
            data-testid="handle"
          >
            <div
              data-mocked="Icon"
              name="angle-right"
              variant="normal"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneLayout > should render correctly in Viewing mode 1`] = `
<div>
  <div
    class="sc-aXZVg iQWtQB"
    data-mocked="Box"
  >
    <div
      class="sc-eqUAAy lplIYk"
      data-mocked="Box"
    >
      <div
        class="sc-kAyceB cHqwUn"
        data-mocked="Box"
      >
        <div
          class="tm-wrapper-left"
        >
          <div
            class="tm-handle"
            data-testid="handle"
          >
            <div
              data-mocked="Icon"
              name="angle-right"
              variant="normal"
            />
          </div>
        </div>
      </div>
      <div
        class="sc-fqkvVR hhwHuy"
        data-mocked="Box"
      >
        <div
          class="sc-dcJsrY cvpwOE"
          data-mocked="Box"
          padding="xxs"
        >
          <topbar />
        </div>
        <div
          class="sc-iGgWBj hzaGuy"
          data-mocked="Box"
        >
          <div
            class="sc-bmzYkS houeVn"
          >
            <div
              class="sc-dAbbOL ikZQFz"
            >
              <div
                class="sc-dAbbOL ikZQFz"
              >
                <div
                  class="sc-ikkxIA hvSQfv"
                  data-testid="camera-controls-orbit"
                  tabindex="0"
                >
                  <div
                    class="sc-feUZmu kGyhFb"
                  >
                    <span
                      aria-label="Orbit"
                      role="img"
                      title="Orbit"
                    >
                      <div
                        class="sc-gFqAkR bBvyEv"
                        data-mocked="Icon"
                        scale="1.04"
                        variant="normal"
                      >
                        <div>
                          <span>
                            <svg
                              height="16"
                              width="16"
                            >
                              <g
                                fill="none"
                              >
                                <path
                                  d="M10.5 8.23c0 4.06-1.14 7.33-2.5 7.33s-2.5-3.35-2.5-7.5S6.62.56 8 .56c1 0 1.87 1.79 2.27 4.35"
                                  stroke="currentColor"
                                />
                                <path
                                  d="m9.23 8.61 1.21-2.18 1.28 2.14z"
                                  fill="currentColor"
                                />
                                <path
                                  d="M7.84 10.56C3.77 10.54.5 9.43.5 8.06s3.36-2.5 7.5-2.5 7.5 1.12 7.5 2.5c0 1-1.78 1.88-4.35 2.27"
                                  stroke="currentColor"
                                />
                                <path
                                  d="m7.46 9.29 2.17 1.22-2.14 1.27z"
                                  fill="currentColor"
                                />
                              </g>
                            </svg>
                          </span>
                        </div>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fPXMVe gpPjDS"
                  >
                    <svg
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M16 0v16L0 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="sc-fUnMCh eAcRGA"
                  >
                    <div
                      style="overflow-y: auto;"
                    >
                      <div
                        class="sc-ikkxIA fuwfLW"
                        data-testid="camera-controls-orbit"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Orbit"
                            role="img"
                            title="Orbit"
                          >
                            <div
                              class="sc-gFqAkR bBvyEv"
                              data-mocked="Icon"
                              scale="1.04"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    height="16"
                                    width="16"
                                  >
                                    <g
                                      fill="none"
                                    >
                                      <path
                                        d="M10.5 8.23c0 4.06-1.14 7.33-2.5 7.33s-2.5-3.35-2.5-7.5S6.62.56 8 .56c1 0 1.87 1.79 2.27 4.35"
                                        stroke="currentColor"
                                      />
                                      <path
                                        d="m9.23 8.61 1.21-2.18 1.28 2.14z"
                                        fill="currentColor"
                                      />
                                      <path
                                        d="M7.84 10.56C3.77 10.54.5 9.43.5 8.06s3.36-2.5 7.5-2.5 7.5 1.12 7.5 2.5c0 1-1.78 1.88-4.35 2.27"
                                        stroke="currentColor"
                                      />
                                      <path
                                        d="m7.46 9.29 2.17 1.22-2.14 1.27z"
                                        fill="currentColor"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          3D Orbit
                        </div>
                      </div>
                      <div
                        class="sc-ikkxIA hvSQfv"
                        data-testid="camera-controls-pan"
                        tabindex="0"
                      >
                        <div
                          class="sc-feUZmu kGyhFb"
                        >
                          <span
                            aria-label="Pan"
                            role="img"
                            title="Pan"
                          >
                            <div
                              class="sc-gFqAkR bBvyEv"
                              data-mocked="Icon"
                              scale="1.04"
                              variant="normal"
                            >
                              <div>
                                <span>
                                  <svg
                                    height="14"
                                    width="14"
                                  >
                                    <path
                                      d="M9.15 1.5a1 1 0 0 1 2 0m-4 0a1 1 0 1 1 2 0m2 2a1 1 0 0 1 2 0v5.9a4.1 4.1 0 0 1-4.1 4.1h-2A4.1 4.1 0 0 1 3.92 12l-2.8-3.34a1.21 1.21 0 0 1 .39-1.84 1.2 1.2 0 0 1 1.19.06l1.42.91h1V2.5a1 1 0 1 1 2 0m4.02 4.28.01-5.28m-2 5.28V1.5m-2 5.28V1.5"
                                      fill="none"
                                      stroke="currentColor"
                                    />
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </span>
                        </div>
                        <div
                          class="sc-hzhJZQ glRvAX"
                          color="inherit"
                          data-mocked="Box"
                          leftpadding="0"
                          variant="small"
                        >
                          3D Pan
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
